# crossfader-juce

./: .gitignore  CMakeLists.txt  crossfader-juce.jucer
Source/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
